add the tig and category for each blog

--- a/_posts/2014-09-25-box-flex.md
+++ b/_posts/2014-09-25-box-flex.md
@@ -1,7 +1,8 @@
 ---
 layout: blog
 title: 弹性盒子模型 box-flex
-tags: css
+categories: Font-end
+tags: css box-flex
 ---
 
 昨天早上看着阿里巴巴上市以来的喜讯时脑子一热，就翻起了阿里巴巴2014年Web前端的笔试题，其中一道题提起了我的兴趣： 
