update some blog

--- a/_posts/2014-10-13-RW_RS.md
+++ b/_posts/2014-10-13-RW_RS.md
@@ -58,5 +58,5 @@ tags: algorithm
 
 ##总结
 
-现在已经有三个算法了，那么什么时候优化算法是最有效的呢？当然是在我们可以充分利用每一次迭代中的结果做每一次进化的时候！在下一节中，我们将在一个TSP问题中比较三个算法的结果。
+现在已经有三个算法了，那么什么时候优化算法是最有效的呢？当然是在我们可以充分利用每一次迭代中的结果做每一次进化的时候！在后面，我们将探讨三个算法的性能优劣。
 
