mounifiled locate img position

--- a/_posts/2014-09-25-box-flex.md
+++ b/_posts/2014-09-25-box-flex.md
@@ -8,7 +8,7 @@ tags: css box-flex
 昨天早上看着阿里巴巴上市以来的喜讯时脑子一热，就翻起了阿里巴巴2014年Web前端的笔试题，其中一道题提起了我的兴趣： 
 
 下图绿色区域的宽度为100%，其中有三个矩形，第一个矩形的宽度是200px，第二个和第三个矩形的宽度相等。请使用CSS3中的功能实现它们的布局。
-![picture1]({{site.baseurl}}/resource/2014-09-25-01.jpg "example_pic")
+![picture1]({{site.blogimgurl}}/2014-09-25-01.jpg "example_pic")
 
 已知Html的结构是：
 `<div class="box">
