--- a/_posts/2014-10-13-RW_RS.md
+++ b/_posts/2014-10-13-RW_RS.md
@@ -4,6 +4,8 @@ title: 实用优化算法（三）Random Walking And Random Sampling
 categories: Algorithm
 tags: algorithm
 ---
+上一节我们介绍了登山算法，它是一种局部优化算法，这一篇我们来说说其他两种优化算法。
+
 ##随意行走算法
 
 **随意行走算法（Random Walking Algorithm）**：也称为“酒鬼步法”，从一个随机位置开始，迈随机的步数。
@@ -58,5 +60,5 @@ tags: algorithm
 
 ##总结
 
-现在已经有三个算法了，那么什么时候优化算法是最有效的呢？当然是在我们可以充分利用每一次迭代中的结果做每一次进化的时候！在后面，我们将探讨三个算法的性能优劣。
+现在已经有三个算法了，那么什么时候选用哪一种优化算法是最有效的呢？当然是在我们可以**充分利用每一次迭代的结果做进化**的时候！在后面，我们将探讨三个算法的性能优劣。
 
