--- a/_posts/2015-01-21-Nano.md
+++ b/_posts/2015-01-21-Nano.md
@@ -1,7 +1,7 @@
 ---
 layout: blog
 title: 小玩nano编辑器
-categories: os
+categories: OS
 tags: nano
 ---
 今天第一次使用 nano ，原本觉得应该操作跟 vim 差不多吧，结果是连墙都找不着，更别说撞头了。。。
