--- a/_posts/2015-01-02-Grunt.md
+++ b/_posts/2015-01-02-Grunt.md
@@ -15,7 +15,7 @@ tags: grunt yeoman bower
 
 1、开发团队代码风格不统一，如何强制开发规范；
 
-2、前期开发的组艰苦如何维护和使用；
+2、前期开发的组件库如何维护和使用；
 
 3、如何模块化前端项目；
 
@@ -147,6 +147,8 @@ bower install bootstrap`
 **grunt-contrib-htmlmin**：压缩 html 文件
 
 **grunt-contrib-concat**：合并文件
+
+**grunt-concurrent**：并行执行一些 tasks
 
 **grunt-newer**：配合 grunt-contrib-watch，检测文件是否是新文件
 
