--- a/_posts/2015-04-01-Clone.md
+++ b/_posts/2015-04-01-Clone.md
@@ -54,5 +54,20 @@ Object.prototype.cloneAll = function(){
 	}
 	return obj;
 }
+var objOne = {
+    'name':'liangqi',
+    'info':{'identity':'student'},
+    'other':[1,2,3]
+},
+objTwo = objOne.cloneAll(); 	//深复制一个新对象
+objTwo.name = 'godsee'; 	//重新赋值
+console.log(objOne.name); 	//name1
+console.log(objTwo.name); 	//name2
+objTwo.info.identity = 'identity2'; 	//改变identity的值
+console.log(objOne.info.identity); 	//identity1
+console.log(objTwo.info.identity); 	//identity2
+objTwo.other = [4,5,6,7,8];
+console.log(objOne.other); 	//[1,2,3]
+console.log(objTwo.other);	//[4,5,6,7,8]
 ```
 通过深度复制，对源对象，以及源对象所有引用进行了复制，克隆了一个完全和源对象不相干的副本。
