--- a/_posts/2015-04-01-Clone.md
+++ b/_posts/2015-04-01-Clone.md
@@ -6,6 +6,12 @@ tags: javascript
 ---
 
 ##什么是克隆
+ECMAScript变量包括两种不同的数据类型的值：基本类型之和引用类型值。
+
+**基本类型值：**简单的数据段，Undefined、Null、Boolean、Number和String，他们是**按值访问**的，因为可以操作保存在变量中的实际的值。
+
+**引用类型值：**是指那些可能有多个值构成的对象。引用类型的值是保存在内存中的对象。Javascript不允许直接访问内存中的位置。所以在操作对象时，实际上是在操作对象的引用而不是实际的对象。引用类型的值是**按引用访问**的。
+
 对象克隆,就是对一个对象生成一个一模一样的对象.
 
 在javascript中,使用简单的复制语句所实现的是原对象的一个引用,对其中任何一个对象属性方法的改变,都将会影响另一个的属性方法。
