--- a/_posts/2015-04-01-Clone.md
+++ b/_posts/2015-04-01-Clone.md
@@ -51,11 +51,11 @@ console.log(objTwo.info.identity);	//identity2
 ```
 Object.prototype.cloneAll = function(){
 	function clonePrototype(){}
-	clonePrototype.prototype = this;
+	clonePrototype.prototype = this;	// this is the origin object
 	var obj = new clonePrototype();
 	for(var element in obj){
 		if( typeof( obj[element] ) == "object" ){
-			obj[element] = obj[element].cloneAll();
+			obj[element] = obj[element].cloneAll();	// 迭代
 		}
 	}
 	return obj;
