--- a/_posts/2015-01-02-Grunt.md
+++ b/_posts/2015-01-02-Grunt.md
@@ -105,12 +105,32 @@ bower install bootstrap`
 
 自动化：减少像压缩，编译，单元测试，代码校验这种重复且无业务关联的工作
 
+**卸载**：`npm uninstall -g grunt`
+
 **安装**：`npm install -g grunt-cli`
+
+**package.json**: 用于node.js 包管理，比如Grunt插件安装
+
+**Gruntfile.js**：Grunt配置问价，配置任务或者自定义任务
 
 **手动初始化package.json**：
 `npm init`
 
-注：package.json 文件中版本号的通配符问题——
+安装Grunt到当前目录： `npm install grunt --save-dev`
+
+**手动生成Gruntfile.js**：`grunt init`
+
+###通配符支持
+
+* 匹配任何字符，除了 /
+
+? 匹配单个字符，除了 /
+
+** 匹配任何字符，包括 / ，所以用在目录路径里面
+
+{} 逗号分隔的”或“操作
+
+！ 排除某个匹配
 
 ^ 限定主版本；~ 限定此版本；
 
@@ -202,6 +222,60 @@ grunt.registerTask('serve', 'start the server and preview your app, --allow-remo
 });
 ```
 
+##Grunt 自定义任务
+
+###获取/设置配置
+可以读取json配置文件:
+`config: grunt.file.readJSON('config.json')`
+
+获取json对象的属性
+`grunt.config('config.key.subkey')`
+
+对相应的模板变量
+`<%= config.key.subkey %>`
+
+设置配置端：
+`grunt.config('config', 'value')`
+
+###动态更改任务配置，循环执行某个任务
+grunt的任务都会放入一个队列顺序执行，但是队列本身是异步执行的，所以下面的这种做法是不会如预期输出：
+
+`grunt.registerTask('demo',function(){
+  for(var i = 0; i < 5; i++){
+    grunt.task.run('t');
+  }
+  // 期望执行玩5次 t 任务之后打印输出
+  // 实际上会立即输出，在 t 任务开始之前
+  console.log('run after t');
+  // 执行5次 t 之后才会执行这个 final 任务
+  grunt.task.run('final');
+})`
+
+动态耕太任务配置可以利用模板变量来做，由于如上所说得异步，所以不能直接在循环中给模板变量复制，而是要额外做一个任务来接收配置
+
+`//假如有这样一个配置
+t:{
+  target: 'some <%= param %>'
+}
+// 在这个demo 任我中需要多册调用 t 任务，每次都要设置 param
+grunt.registerTask('demo', function(){
+  for(var i = 0; i < 5; i++){
+    //要一个额外的任务去更改配置
+    grunt.task.run('r_wrapper:' + i);
+  }
+});
+// 更改 t 配置并运行
+grunt.register('t_wrapper', function( i ){
+  grunt.config('param', i);
+  grunt.task.run('t');
+})
+`
+
+###设置输出文字颜色
+`grunt.log('test color'.green)`
+
+##参考文章
+[前端工作流](http://www.hulufei.com/post/grunt-introduction)
 
 
 
