--- a/_posts/2015-01-02-Grunt.md
+++ b/_posts/2015-01-02-Grunt.md
@@ -92,12 +92,13 @@ bower install bootstrap`
 `bower install angular --save-dev`
 
 **关于 bowerrc**
-`{
-	"directory":"bower_components",
-	"proxy":"http://proxy.tencent.com:8080",	//添加代理
-	"https-proxy":"https://proxy.tencent.com:8080",
-	"timeout":60000		//修改时延
-}`
+
+    {
+    	"directory":"bower_components",
+    	"proxy":"http://proxy.tencent.com:8080",	//添加代理
+    	"https-proxy":"https://proxy.tencent.com:8080",
+    	"timeout":60000		//修改时延
+    }
 
 ##Grunt
 
@@ -184,43 +185,39 @@ bower install bootstrap`
 
 ##组合Task——build
 
-```
-grunt.registerTask('build', [
-  'clean:dist',			// 清除 dist 和 .tmp 文件夹
-  'wiredep',			// 在 html 中加入bower中的插件 js & css
-  'useminPrepare',		// 指定使用usemin 的 html（其中包含<build></build>）
-  'concurrent:dist',		// 并行执行 css->.tmp,imagemin->dist,svgmin->dist
-  'autoprefixer',		// 补全 .tpm 中 css 的厂商前缀
-  'concat',			// 根据useminPrepare，合并 js & css
-  'cssmin',			// 压缩 css 并复制到 dist
-  'uglify',			// 压缩 js 并复制到 dist
-  'copy:dist',			// 复制 ico txt webp fonts 到 dist
-  'rev',			// 给所有静态文件加 MD5 版本号
-  'usemin',			// 修改 html & css 中的静态文件的名称
-  'htmlmin'			// 压缩 html
-]);
-```
+    grunt.registerTask('build', [
+      'clean:dist',			// 清除 dist 和 .tmp 文件夹
+      'wiredep',			// 在 html 中加入bower中的插件 js & css
+      'useminPrepare',		// 指定使用usemin 的 html（其中包含<build></build>）
+      'concurrent:dist',		// 并行执行 css->.tmp,imagemin->dist,svgmin->dist
+      'autoprefixer',		// 补全 .tpm 中 css 的厂商前缀
+      'concat',			// 根据useminPrepare，合并 js & css
+      'cssmin',			// 压缩 css 并复制到 dist
+      'uglify',			// 压缩 js 并复制到 dist
+      'copy:dist',			// 复制 ico txt webp fonts 到 dist
+      'rev',			// 给所有静态文件加 MD5 版本号
+      'usemin',			// 修改 html & css 中的静态文件的名称
+      'htmlmin'			// 压缩 html
+    ]);
 
 ##组合Task——serve
 
-```
-grunt.registerTask('serve', 'start the server and preview your app, --allow-remote for remote access', function (target) {
-  if (grunt.option('allow-remote')) {
-    grunt.config.set('connect.options.hostname', '0.0.0.0');
-  }
-  if (target === 'dist') {
-    return grunt.task.run(['build', 'connect:dist:keepalive']);
-  }
-  grunt.task.run([
-    'clean:server',		// 清除 .tmp 文件
-    'wiredep',			// 在 html 中加入bower中的插件 js & css
-    'concurrent:server',	// 复制 css 到 .tmp
-    'autoprefixer',		// 补全 .tpm 中 css 的厂商前缀
-    'connect:livereload',	// 开启服务
-    'watch'			// 监视代码变化
-  ]);
-});
-```
+    grunt.registerTask('serve', 'start the server and preview your app, --allow-remote for remote access', function (target) {
+      if (grunt.option('allow-remote')) {
+        grunt.config.set('connect.options.hostname', '0.0.0.0');
+      }
+      if (target === 'dist') {
+        return grunt.task.run(['build', 'connect:dist:keepalive']);
+      }
+      grunt.task.run([
+        'clean:server',		// 清除 .tmp 文件
+        'wiredep',			// 在 html 中加入bower中的插件 js & css
+        'concurrent:server',	// 复制 css 到 .tmp
+        'autoprefixer',		// 补全 .tpm 中 css 的厂商前缀
+        'connect:livereload',	// 开启服务
+        'watch'			// 监视代码变化
+      ]);
+    });
 
 ##Grunt 自定义任务
 
@@ -240,36 +237,35 @@ grunt.registerTask('serve', 'start the server and preview your app, --allow-remo
 ###动态更改任务配置，循环执行某个任务
 grunt的任务都会放入一个队列顺序执行，但是队列本身是异步执行的，所以下面的这种做法是不会如预期输出：
 
-`grunt.registerTask('demo',function(){
-  for(var i = 0; i < 5; i++){
-    grunt.task.run('t');
-  }
-  // 期望执行玩5次 t 任务之后打印输出
-  // 实际上会立即输出，在 t 任务开始之前
-  console.log('run after t');
-  // 执行5次 t 之后才会执行这个 final 任务
-  grunt.task.run('final');
-})`
+    grunt.registerTask('demo',function(){
+      for(var i = 0; i < 5; i++){
+        grunt.task.run('t');
+      }
+      // 期望执行玩5次 t 任务之后打印输出
+      // 实际上会立即输出，在 t 任务开始之前
+      console.log('run after t');
+      // 执行5次 t 之后才会执行这个 final 任务
+      grunt.task.run('final');
+    })
 
 动态耕太任务配置可以利用模板变量来做，由于如上所说得异步，所以不能直接在循环中给模板变量复制，而是要额外做一个任务来接收配置
 
-`//假如有这样一个配置
-t:{
-  target: 'some <%= param %>'
-}
-// 在这个demo 任我中需要多册调用 t 任务，每次都要设置 param
-grunt.registerTask('demo', function(){
-  for(var i = 0; i < 5; i++){
-    //要一个额外的任务去更改配置
-    grunt.task.run('r_wrapper:' + i);
-  }
-});
-// 更改 t 配置并运行
-grunt.register('t_wrapper', function( i ){
-  grunt.config('param', i);
-  grunt.task.run('t');
-})
-`
+    //假如有这样一个配置
+    t:{
+      target: 'some <%= param %>'
+    }
+    // 在这个demo 任我中需要多册调用 t 任务，每次都要设置 param
+    grunt.registerTask('demo', function(){
+      for(var i = 0; i < 5; i++){
+        //要一个额外的任务去更改配置
+        grunt.task.run('r_wrapper:' + i);
+      }
+    });
+    // 更改 t 配置并运行
+    grunt.register('t_wrapper', function( i ){
+      grunt.config('param', i);
+      grunt.task.run('t');
+    })
 
 ###设置输出文字颜色
 `grunt.log('test color'.green)`
