--- a/_posts/2015-06-18-JSONP.md
+++ b/_posts/2015-06-18-JSONP.md
@@ -52,25 +52,24 @@ JSON 是一种基于文本的数据交互方式
 
 本地服务器localserver.com 下面有个jsonp.html 页面代码如下：
 
-`<head>
-  <script type="text/javascript" src="http://remoteserver.com/remote.js"></script>
-</head>`
+    <head>
+      <script type="text/javascript" src="http://remoteserver.com/remote.js"></script>
+    </head>
 
 毫无疑问，页面将会弹出一个提示窗体，显示跨域调用成功.
 
 2、现在我们在jsonp.html页面定义一个函数，然后在远程remote.js中传入数据进行调用。
 jsonp.html页面代码如下
 
-`<head>
-    <title></title>
-    <script type="text/javascript">
-    var localHandler = function(data){
-        alert('我是本地函数，可以被跨域的remote.js文件调用，远程js带来的数据是：' + data.result);
-    };
-    </script>
-    <script type="text/javascript" src="http://remoteserver.com/remote.js"></script>
-</head>
-`
+    <head>
+        <title></title>
+        <script type="text/javascript">
+        var localHandler = function(data){
+            alert('我是本地函数，可以被跨域的remote.js文件调用，远程js带来的数据是：' + data.result);
+        };
+        </script>
+        <script type="text/javascript" src="http://remoteserver.com/remote.js"></script>
+    </head>
 
 remote.js 文件代码如下
 `localHandler({"result":"我是远程js带来的数据"});`
@@ -80,60 +79,63 @@ remote.js 文件代码如下
 3、聪明的开发者很容易想到，只要服务端提供的js脚本是动态生成的就行了呗，这样调用者可以传一个参数过去告诉服务端“我想要一段调用XXX函数的js代码，请你返回给我”，于是服务器就可以按照客户端的需求来生成js脚本并响应了。
 
 看jsonp.html页面的代码：
-`<head>
-    <title></title>
-    <script type="text/javascript">
-    // 得到航班信息查询结果后的回调函数
-    var flightHandler = function(data){
-        alert('你查询的航班结果是：票价 ' + data.price + ' 元，' + '余票 ' + data.tickets + ' 张。');
-    };
-    // 提供jsonp服务的url地址（不管是什么类型的地址，最终生成的返回值都是一段javascript代码）
-    // 注意参数 callback
-    var url = "http://flightQuery.com/jsonp/flightResult.aspx?code=CA1998&callback=flightHandler";
-    // 创建script标签，设置其属性
-    var script = document.createElement('script');
-    script.setAttribute('src', url);
-    // 把script标签加入head，此时调用开始
-    document.getElementsByTagName('head')[0].appendChild(script); 
-    </script>
-</head>`
+
+    <head>
+        <title></title>
+        <script type="text/javascript">
+        // 得到航班信息查询结果后的回调函数
+        var flightHandler = function(data){
+            alert('你查询的航班结果是：票价 ' + data.price + ' 元，' + '余票 ' + data.tickets + ' 张。');
+        };
+        // 提供jsonp服务的url地址（不管是什么类型的地址，最终生成的返回值都是一段javascript代码）
+        // 注意参数 callback
+        var url = "http://flightQuery.com/jsonp/flightResult.aspx?code=CA1998&callback=flightHandler";
+        // 创建script标签，设置其属性
+        var script = document.createElement('script');
+        script.setAttribute('src', url);
+        // 把script标签加入head，此时调用开始
+        document.getElementsByTagName('head')[0].appendChild(script); 
+        </script>
+    </head>
 
 这次的代码变化比较大，不再直接把远程js文件写死，而是编码实现动态查询，而这也正是jsonp客户端实现的**核心部分**，本例中的重点也就在于如何完成jsonp调用的全过程。
 
 我们看到调用的url中传递了一个code参数，告诉服务器我要查的是CA1998次航班的信息，而callback参数则告诉服务器，我的本地回调函数叫做flightHandler，所以请把查询结果传入这个函数中进行调用。
 
 OK，服务器很聪明，这个叫做flightResult.aspx的页面生成了一段这样的代码提供给jsonp.html（服务端的实现这里就不演示了，与你选用的语言无关，说到底就是拼接字符串）：
-`fightHandler({
-	"code": "CA1998",
-	"price": 1780,
-	"tickets": 5
-})`
+    
+    fightHandler({
+    	"code": "CA1998",
+    	"price": 1780,
+    	"tickets": 5
+    })
 
 我们看到，传递给flightHandler函数的是一个json，它描述了航班的基本信息。运行一下页面，成功弹出提示窗口，jsonp的执行全过程顺利完成！
 
 4、到这里为止的话，相信你已经能够理解jsonp的客户端实现原理了吧？剩下的就是如何把代码封装一下，以便于与用户界面交互，从而实现多次和重复调用。
 
 什么？你用的是jQuery，想知道jQuery如何实现jsonp调用？好吧，那我就好人做到底，再给你一段jQuery使用jsonp的代码（我们依然沿用上面那个航班信息查询的例子，假定返回jsonp结果不变）：
-`<head>
-  <script type="text/javascript" src="jquery.min.js"></script>
-  <script type="text/javascript">
-  $(document).ready(function(){ 
-      $.ajax({
-         type: "get",
-         async: false,
-         url: "http://flightQuery.com/jsonp/flightResult.aspx?code=CA1998",
-         dataType: "jsonp",
-         jsonp: "callback",//传递给请求处理程序或页面的，用以获得jsonp回调函数名的参数名(一般默认为:callback)
-         jsonpCallback:"flightHandler",//自定义的jsonp回调函数名称，默认为jQuery自动生成的随机函数名，也可以写"?"，jQuery会自动为你处理数据
-         success: function(json){
-             alert('您查询到航班信息：票价： ' + json.price + ' 元，余票： ' + json.tickets + ' 张。');
-         },
-         error: function(){
-             alert('fail');
-         }
-     });
-  });
- </script>
- </head>`
+    
+    <head>
+      <script type="text/javascript" src="jquery.min.js"></script>
+      <script type="text/javascript">
+      $(document).ready(function(){ 
+          $.ajax({
+             type: "get",
+             async: false,
+             url: "http://flightQuery.com/jsonp/flightResult.aspx?code=CA1998",
+             dataType: "jsonp",
+             jsonp: "callback",//传递给请求处理程序或页面的，用以获得jsonp回调函数名的参数名(一般默认为:callback)
+             jsonpCallback:"flightHandler",//自定义的jsonp回调函数名称，默认为jQuery自动生成的随机函数名，也可以写"?"，jQuery会自动为你处理数据
+             success: function(json){
+                 alert('您查询到航班信息：票价： ' + json.price + ' 元，余票： ' + json.tickets + ' 张。');
+             },
+             error: function(){
+                 alert('fail');
+             }
+         });
+      });
+     </script>
+     </head>
 
  是不是有点奇怪？为什么我这次没有写flightHandler这个函数呢？而且竟然也运行成功了！哈哈，这就是jQuery的功劳了，jquery在处理jsonp类型的ajax时，自动帮你生成回调函数并把数据取出来供success属性方法来调用
