--- a/_posts/2016-01-01-Last_year.md
+++ b/_posts/2016-01-01-Last_year.md
@@ -30,4 +30,4 @@ tags: life
 ##结语
 2015，感谢爸爸妈妈对我的坚定支持。感谢女友的一直陪伴。感谢网易游戏平台服务部FED让我开始实习之旅，感谢腾讯 AlloyTeam 对我前端技术路的引导。
 
-**2016，我来啦！让一起更精彩！**
+**2016，我来啦！让一切更精彩！**
